<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/payColor_payBack">
    <androidx.cardview.widget.CardView
        android:id="@+id/logo_pay"
        android:layout_width="120dp"
        android:layout_height="45dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="90dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/yellow_payColor">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_me"
            android:textColor="@color/text"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ilova_uz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ilova_tilini_tanlang"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_below="@id/logo_pay"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/ilova_ru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_below="@id/ilova_uz"
        android:text="Выберите язык приложения"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"/>
    <TextView
        android:id="@+id/ilova_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_below="@id/ilova_ru"
        android:text="Select Application Language"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/til_uz"
        android:layout_width="150dp"
        android:layout_height="50dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        android:layout_below="@id/ilova_en"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white_darkGray">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o_zbekcha"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/til_ru"
        android:layout_width="150dp"
        android:layout_height="50dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        android:layout_below="@id/til_uz"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white_darkGray">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruscha"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView><androidx.cardview.widget.CardView
        android:id="@+id/til_en"
        android:layout_width="150dp"
        android:layout_height="50dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        android:layout_below="@id/til_ru"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white_darkGray">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>