<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">
        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf"
            android:layout_marginTop="16dp">
            <ImageView
                android:id="@+id/back_sign_up"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/baseline_arrow_back_24"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <TextView
            android:id="@+id/text_pk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parolni_kiriting"
            android:layout_below="@id/ll_back"
            android:layout_marginTop="16dp"
            android:textSize="19sp"
            android:textColor="@color/text"/>
        <TextView
            android:id="@+id/text_un"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uni_ro_yxatdan_o_tish_vaqtida_kiritgansiz"
            android:textSize="12sp"
            android:textColor="@color/text"
            android:layout_below="@id/text_pk"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sizninng_raqamingiz"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:textColor="@color/text"
            android:layout_below="@id/text_un"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/tv_email"
            android:layout_marginTop="8dp"
            app:strokeWidth="1dp"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/gray_white"
            android:backgroundTint="@color/white_darkGray">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="15dp">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="example@gmail.com"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="normal"
                    tools:ignore="Autofill,HardcodedText,TextContrastCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />
                <ImageView
                    android:id="@+id/clear_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/baseline_clear_24"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_email"
            android:text="@string/parol"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            tools:ignore="HardcodedText" />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:backgroundTint="@color/white_darkGray"
            android:layout_below="@id/tv_password"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/gray_white"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="123abc!@#ABC"
                    android:maxLength="8"
                    android:textColor="@color/text"
                    android:textColorHint="@color/gray_white"
                    android:textSize="18sp"
                    tools:ignore="Autofill,HardcodedText,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />
                <ImageView
                    android:id="@+id/clear_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/baseline_clear_24"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone"
                    android:layout_gravity="center_vertical"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>



    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="28dp">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/tv_forgot_parol"
            android:backgroundTint="@color/whitePayColor_darkPayColor"
            android:text="@string/davom_ettirish"
            android:textColor="@color/dark_whitePayColor_darkPayColor"
            app:cornerRadius="10dp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@id/tv_forgot_parol"
            android:progressBackgroundTint="@color/payMeColor"
            tools:ignore="TextContrastCheck,VisualLintButtonSize"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_forgot_parol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="30dp"
            android:text="@string/parolni_unutdingizmi"
            android:textColor="@color/payMeColor"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>

</LinearLayout>