<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/logout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/logout_icon"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parolni_unutdingizmi"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/payMeColor"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/ll_numbers"
        android:gravity="center_horizontal"
        android:layout_marginBottom="100dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/logo_pay"
            android:layout_width="120dp"
            android:layout_height="45dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:strokeWidth="0dp"
            android:backgroundTint="@color/payMeColor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_me"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:textStyle="bold"/>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin_kodni_kiriting"
            android:textSize="16sp"
            android:layout_marginTop="26dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="22dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <View
                    android:id="@+id/view_01"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="14dp"
                    android:background="@drawable/bg_pin_inactive" />
                <View
                    android:id="@+id/view_02"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="14dp"
                    android:background="@drawable/bg_pin_inactive" />
                <View
                    android:id="@+id/view_03"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="14dp"
                    android:background="@drawable/bg_pin_inactive" />
                <View
                    android:id="@+id/view_04"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="14dp"
                    android:background="@drawable/bg_pin_inactive" />
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/error_attempt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text=""
            android:textSize="12sp"
            android:textColor="@android:color/holo_red_dark"/>
    </LinearLayout>
<LinearLayout
    android:id="@+id/ll_numbers"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:layout_alignParentBottom="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="1"
            android:textColor="@color/text"
            android:textStyle="normal"
            android:textSize="30sp"
            android:gravity="center"
            tools:ignore="HardcodedText,NestedWeights" />
        <TextView
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="2"
            android:textColor="@color/text"
            android:textStyle="normal"
            android:textSize="30sp"
            android:gravity="center"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="3"
            android:textColor="@color/text"
            android:textStyle="normal"
            android:textSize="30sp"
            android:gravity="center"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="4"
            android:textColor="@color/text"
            android:textStyle="normal"
            android:textSize="30sp"
            android:gravity="center"
            tools:ignore="HardcodedText,NestedWeights" />
        <TextView
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="5"
            android:textColor="@color/text"
            android:textStyle="normal"
            android:textSize="30sp"
            android:gravity="center"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="6"
            android:textColor="@color/text"
            android:textStyle="normal"
            android:textSize="30sp"
            android:gravity="center"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="7"
            android:textColor="@color/text"
            android:textStyle="normal"
            android:textSize="30sp"
            android:gravity="center"
            tools:ignore="HardcodedText,NestedWeights" />
        <TextView
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="8"
            android:textColor="@color/text"
            android:textStyle="normal"
            android:textSize="30sp"
            android:gravity="center"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="9"
            android:textColor="@color/text"
            android:textStyle="normal"
            android:textSize="30sp"
            android:gravity="center"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center_horizontal">
        <RelativeLayout
            android:id="@+id/btn_touch"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">
            <View
                android:id="@+id/vw_touch"
                android:layout_centerInParent="true"
                android:layout_width="26dp"
                android:layout_height="30dp"
                android:background="@drawable/touch_id"
                android:visibility="gone"/>
            <View
                android:id="@+id/vw_confirm"
                android:layout_centerInParent="true"
                android:layout_width="26dp"
                android:layout_height="30dp"
                android:background="@drawable/check_icon"
                />
        </RelativeLayout>
        <TextView
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/text"
            android:textStyle="normal"
            android:textSize="30sp"
            android:gravity="center"
            tools:ignore="HardcodedText" />
        <RelativeLayout
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="55dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:background="@drawable/clear_icon"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
</RelativeLayout>